--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "cd client && npm install && npx vite build"
+    "build": "cd client && NODE_ENV=development npm install && npx vite build"
   },
   "keywords": [],
   "author": "",
