--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "apify": "^3.5.3",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.6",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "node-fetch": "^2.7.0",
-    "dotenv": "^16.3.1"
+    "sqlite3": "^5.1.6"
   }
 }
